tests/compile-fail/no-default.stderr
error[E0277]: the trait bound `DoesNotImplementDefault: Default` is not satisfied
 --> tests/compile-fail/no-default.rs:5:10
  |
5 | #[derive(ConstructorLite)]
  |          ^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `DoesNotImplementDefault`
  |
  = note: this error originates in the derive macro `ConstructorLite` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `DoesNotImplementDefault` with `#[derive(Default)]`
  |
3 | #[derive(Default)]
  |
